--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "client": "cd client && npm start",
     "server": "cd server && npm start",
-    "start": "concurrently \"npm run server\" \"npm run client\"",
+    "start": "cd client && npm start",
+    "startServer": "concurrently \"npm run server\" \"npm run client\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
