--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
+  "engines": {
+    "node": "18.13.0",
+    "npm": "9.2.0"
+  },
   "type": "module",
   "keywords": [],
   "author": "",
