--- a/client/package.json
+++ b/client/package.json
@@ -6,26 +6,29 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@testing-library/jest-dom": "^6.x",
+    "@testing-library/react": "^16.x",
+    "@testing-library/user-event": "^14.x",
+    "chalk": "^5.3.0",
     "font-awesome": "^4.7.0",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.0",
+    "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "reactjs-popup": "^2.0.6",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^4.x"
   },
   "engines": {
-    "node": "18.13.0",
-    "npm": "9.2.0"
+    "node": "20.x",
+    "npm": "10.x"
   },
   "scripts": {
     "build": "react-scripts build",
     "start": "react-scripts start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "proxy": "http://localhost:5000",
   "eslintConfig": {
     "extends": [
       "react-app",
