--- a/package.json
+++ b/package.json
@@ -4,25 +4,29 @@
   "description": "This is application Medical Appointment Booking for searching doctors and booking consultation",
   "main": "index.js",
   "dependencies": {
+    "materialize-css": "^1.0.0",
     "react-scripts": "5.0.1"
   },
   "scripts": {
     "client": "cd client && npm start",
     "server": "cd server && npm start",
     "start": "cd client && npm start",
-    "startServer": "concurrently \"npm run server\" \"npm run client\"",
+    "startAll": "concurrently \"npm run server\" \"npm run client\"",
+    "build": "cd client && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "concurrently": "^8.2.2"
+    "@types/materialize-css": "^1.0.14",
+    "concurrently": "^8.2.2",
+    "webpack-dev-server": "^5.0.4"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/RomanWalhalla/Medical_apps.git"
   },
   "engines": {
-    "node": "18.13.0",
-    "npm": "9.2.0"
+    "node": "20.x",
+    "npm": "10.x"
   },
   "keywords": [],
   "author": "",
