--- a/server/package.json
+++ b/server/package.json
@@ -5,11 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "engines": {
-    "node": "18.13.0",
-    "npm": "9.2.0"
+    "node": "20.x",
+    "npm": "10.x"
   },
   "type": "module",
   "keywords": [],
@@ -24,12 +24,15 @@
     "ejs": "^3.1.9",
     "express": "^4.19.2",
     "express-session": "^1.17.3",
-    "express-validator": "^6.14.2",
+    "express-validator": "^7.x",
     "http-errors": "^2.0.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.5.1",
-    "nodemon": "^2.0.22",
-    "passport": "^0.6.0",
-    "uuid": "^8.3.2"
+    "jsonwebtoken": "^9.x",
+    "mongoose": "^8.x",
+    "nodemon": "^3.1.4",
+    "passport": "^0.x",
+    "uuid": "^10.x"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^5.0.4"
   }
 }
