--- a/package.json
+++ b/package.json
@@ -3,9 +3,47 @@
   "version": "1.0.0",
   "description": "This is application Medical Appointment Booking for searching doctors and booking consultation",
   "main": "index.js",
+  "workspaces": [
+    "client",
+    "server"
+  ],
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/material": "^6.0.0",
+    "@testing-library/jest-dom": "^6.x",
+    "@testing-library/react": "^16.x",
+    "@testing-library/user-event": "^14.x",
+    "ag-grid-react": "^32.1.0",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "chalk": "^5.3.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
+    "ejs": "^3.1.9",
+    "express": "^4.19.2",
+    "express-session": "^1.17.3",
+    "express-validator": "^7.x",
+    "font-awesome": "^4.7.0",
+    "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.x",
     "materialize-css": "^1.0.0",
-    "react-scripts": "5.0.1"
+    "mongoose": "^8.x",
+    "nodemon": "^3.1.4",
+    "passport": "^0.x",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^6.26.1",
+    "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
+    "react-toastify": "^10.0.5",
+    "reactjs-popup": "^2.0.6",
+    "uuid": "^10.x",
+    "web-vitals": "^4.x"
   },
   "scripts": {
     "client": "cd client && npm start",
@@ -16,6 +54,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "x",
     "@types/materialize-css": "^1.0.14",
     "concurrently": "^8.2.2",
     "webpack-dev-server": "^5.0.4"
@@ -28,6 +67,7 @@
     "node": "20.x",
     "npm": "10.x"
   },
+  "proxy": "http://localhost:5000",
   "keywords": [],
   "author": "",
   "license": "ISC",
