--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
 PORT=5000
 MONGO_URI=mongodb+srv://romanwalhalla:roman@medapp.bh1kwhu.mongodb.net/MedApp
-JWT_SECRET=124129854723ewhfgcvhjdbhjs
+JWT_ACCESS_SECRET=/$//$=G$JF½¬ħŋłĸ↓~¶€←đŋð="=)=!¿"UJD//F*FD3@~½¬½ŋħĸ→↓↓
+JWT_REFRESH_SECRET=hdx/$"#Y(RHY#=$U="~½¬¬\3~|3¶€ŋŧˀĸ↓→ł€ŋł→$)$=
