--- a/server/package.json
+++ b/server/package.json
@@ -14,25 +14,5 @@
   "type": "module",
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^5.1.1",
-    "bcryptjs": "^2.4.3",
-    "chalk": "^5.3.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "ejs": "^3.1.9",
-    "express": "^4.19.2",
-    "express-session": "^1.17.3",
-    "express-validator": "^7.x",
-    "http-errors": "^2.0.0",
-    "jsonwebtoken": "^9.x",
-    "mongoose": "^8.x",
-    "nodemon": "^3.1.4",
-    "passport": "^0.x",
-    "uuid": "^10.x"
-  },
-  "devDependencies": {
-    "webpack-dev-server": "^5.0.4"
-  }
+  "license": "ISC"
 }
