--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "server": "cd server && npm start",
     "start": "cd client && npm start",
     "startAll": "concurrently \"npm run server\" \"npm run client\"",
-    "build": "cd client && npm run build",
+    "build": "cd client && CI=false npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
