--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
     "server": "cd server && npm start",
     "start": "cd client && npm start",
     "startAll": "concurrently \"npm run server\" \"npm run client\"",
-    "build": "cd client && CI=false npm run build",
-
+    "build1": "cd client && CI=false npm run build",
+    "build": "react-scripts build && rm -rdf server/build && mv build server/",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint ."
 
