--- a/package.json
+++ b/package.json
@@ -53,19 +53,13 @@
     "start": "cd client && npm start",
     "startAll": "concurrently \"npm run server\" \"npm run client\"",
     "build1": "cd client && CI=false npm run build",
-
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint .",
     "client:build": "cd client && npm run build",
     "server:cleanup": "rm -rdf server/build",
     "server:move": "mv client/build server/",
-    "build": "npm run client:build && npm run server:cleanup && npm run server:move"
-
-    "build2": "react-scripts build && rm -rdf server/build && mv build server/",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint ."
-
-
+    "build": "npm run client:build && npm run server:cleanup && npm run server:move",
+    "build2": "react-scripts build && rm -rdf server/build && mv build server/"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "x",
