--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,11 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "engines": {
     "node": "20.x",
@@ -14,5 +15,14 @@
   "type": "module",
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+  "express": "^4.18.2",
+  "cors": "^2.8.5",
+  "mongoose": "^7.6.0",
+  "dotenv": "^16.3.1"
+},
+"devDependencies": {
+  "nodemon": "^3.0.3"
+}
 }
