--- a/server/package.json
+++ b/server/package.json
@@ -17,12 +17,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-  "express": "^4.18.2",
-  "cors": "^2.8.5",
-  "mongoose": "^7.6.0",
-  "dotenv": "^16.3.1"
-},
-"devDependencies": {
-  "nodemon": "^3.0.3"
-}
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "mongoose": "^7.6.0",
+    "dotenv": "^16.3.1",
+    "chalk": "^5.3.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3"
+  }
 }
