--- a/server/package.json
+++ b/server/package.json
@@ -17,11 +17,26 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
+    "express": "^4.19.2",
+    "express-session": "^1.17.3",
+    "express-validator": "^7.x",
     "cors": "^2.8.5",
     "mongoose": "^7.6.0",
     "dotenv": "^16.3.1",
-    "chalk": "^5.3.0"
+    "chalk": "^5.3.0",
+    "jsonwebtoken": "^9.x",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "nodemon": "^3.1.4",
+    "http-errors": "^2.0.0",
+    "ejs": "^3.1.9",
+    "path": "^0.12.7",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
+    "uuid": "^10.0.0",
+    "cookie-parser": "^1.4.6",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
