--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 PORT=5000
 
-MONGO_URI=mongodb+srv://romanwalhalla:123456@medapp.bh1kwhu.mongodb.net/
+MONGO_URI=mongodb+srv://romanwalhalla:123456@medapp.bh1kwhu.mongodb.net?retryWrites=true&w=majority
 JWT_ACCESS_SECRET=/$//$=G$JF½¬ħŋłĸ↓~¶€←đŋð="=)=!¿"UJD//F*FD3@~½¬½ŋħĸ→↓↓
 JWT_REFRESH_SECRET=hdx/$"#Y(RHY#=$U="~½¬¬\3~|3¶€ŋŧˀĸ↓→ł€ŋł→$)$=
