--- a/package.json
+++ b/package.json
@@ -19,21 +19,13 @@
     "@testing-library/react": "^16.x",
     "@testing-library/user-event": "^14.x",
     "ag-grid-react": "^32.1.0",
-    "bcrypt": "^5.1.1",
-    "bcryptjs": "^2.4.3",
-    "chalk": "^5.3.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.9",
-    "express": "^4.19.2",
-    "express-session": "^1.17.3",
-    "express-validator": "^7.x",
     "font-awesome": "^4.7.0",
     "http-errors": "^2.0.0",
-    "jsonwebtoken": "^9.x",
     "materialize-css": "^1.0.0",
     "mongoose": "^8.x",
-    "nodemon": "^3.1.4",
     "passport": "^0.x",
     "react": "^18.2.0",
     "react-datepicker": "^7.3.0",
@@ -51,7 +43,7 @@
     "client": "cd client && npm start",
     "server": "cd server && npm start",
     "start": "cd client && npm start",
-    "startAll": "concurrently \"npm run server\" \"npm run client\"",
+    "startAll": "npx concurrently \"npm run server\" \"npm run client\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint .",
     "client:build": "cd client && npm run build",
